# NIDAQControl

./: LICENSE  README.md  pyproject.toml
NIDAQControl/: Relay.py  USB6281.py  __init__.py
docs/: README.md
docs/NIDAQControl/: Relay.md  USB6281.md  index.md
